--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@iconify-json/ep": "^1.2.3",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.17.20",
@@ -48,6 +49,7 @@
     "sass": "^1.92.1",
     "typescript": "~5.8.0",
     "unplugin-auto-import": "^20.1.0",
+    "unplugin-icons": "^22.2.0",
     "unplugin-vue-components": "^29.0.0",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0",
