--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/view": "^6.38.2",
     "@element-plus/icons-vue": "^2.3.2",
     "@vueuse/core": "^13.9.0",
+    "codemirror": "^6.0.2",
     "element-plus": "^2.11.2",
     "javascript-stringify": "^2.1.0",
     "lodash": "^4.17.21",
