--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "element-plus": "^2.11.2",
     "javascript-stringify": "^2.1.0",
     "lodash": "^4.17.21",
+    "monaco-editor": "^0.53.0",
     "nanoid": "^5.1.5",
     "normalize.css": "^8.0.1",
     "pinia": "^3.0.3",
@@ -58,6 +59,7 @@
     "unplugin-icons": "^22.2.0",
     "unplugin-vue-components": "^29.0.0",
     "vite": "^7.0.6",
+    "vite-plugin-monaco-editor-esm": "^2.0.2",
     "vite-plugin-vue-devtools": "^8.0.0",
     "vitest": "^3.2.4",
     "vue-tsc": "^3.0.4"
