--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nanoid": "^5.1.5",
     "normalize.css": "^8.0.1",
     "pinia": "^3.0.3",
+    "sortablejs": "^1.15.6",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "vue-serialize-input": "^0.0.17",
@@ -42,6 +43,7 @@
     "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.17.20",
     "@types/node": "^22.16.5",
+    "@types/sortablejs": "^1.15.8",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
     "@vitest/eslint-plugin": "^1.3.4",
