--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.4",
@@ -65,6 +68,7 @@
     "vite": "^7.0.6",
     "vite-plugin-monaco-editor-esm": "^2.0.2",
     "vite-plugin-vue-devtools": "^8.0.0",
+    "vitepress": "2.0.0-alpha.12",
     "vitest": "^3.2.4",
     "vue-tsc": "^3.0.4"
   }
