--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nanoid": "^5.1.5",
     "normalize.css": "^8.0.1",
     "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "sortablejs": "^1.15.6",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
